# Robotics-Lab

./: .gitmodules
mycobot_robot_control/: .gitignore  README.md  hybrid_pick_place.sh  laptop_bootstrap.sh  make_student_bundle.sh  pick.sh  pick_vision.sh  test_robot.sh  vision.sh
mycobot_robot_control/src/mycobot_robot_control/: package.xml  setup.cfg  setup.py
mycobot_robot_control/src/mycobot_robot_control/docs/: BASIC.md  BEGINNER_TUTORIAL.md  First_error.md  NEXT_LAPTOP_INSTALL.md  STUDENT_DISTRIBUTION.md  STUDENT_TUTORIAL.md  SUMMER_SCHOOL_SETUP.md  Tasks.md
mycobot_robot_control/src/mycobot_robot_control/examples/: 01_read_joint_angles.py  02_move_one_joint.py  03_check_pick_algorithm_ik.py
mycobot_robot_control/src/mycobot_robot_control/mycobot_robot_control/: __init__.py  cam_to_coord.py  go_home.py  homography_transform.py  move_to_pose.py  move_z.py  pick_flow.py  pick_flow_vision.py  pick_service.py  rotate_arm.py  sort_blocks.py  tactile_visualizer.py
mycobot_robot_control/src/mycobot_robot_control/provision/: grip_set.py
mycobot_robot_control/src/mycobot_robot_control/scripts/: hybrid_pick_place.sh  pick.sh  pick_vision.sh  test_robot.sh  vision.sh
