<?xml version="1.0"?>
<package format="3">
  <name>mycobot_robot_control</name>
  <version>0.1.0</version>
  <description>Student-facing myCobot 280 control scripts, examples, and tutorials.</description>
  <maintainer email="teacher@example.com">Workshop Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>mycobot_client_2</exec_depend>
  <exec_depend>mycobot_msgs_2</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
